--- a/messenger/README
+++ b/messenger/README
@@ -46,31 +46,31 @@
 -get_info +
 -is_readed +
 -is_edited +
--forward
+-forward -
 
 
 -------Chat-------
 -create +
--edit +
+-edit + 
 -remove +
 -get_info +
--add_user 
--remove_user
--get_users_from_group_chat
--mute
--pin
--clear_history
+-add_user +
+-remove_user +
+-get_users_from_group_chat +
+-mute +
+-pin -
+-clear_history -
 
 
 -------User-------
--get_user_info
--block_user
--leave_from_chat
+-get_user_info +
+-block_user -
+-leave_from_chat // не нужно, т.к. есть remove user
 
 
--get_chat_list_for_user
--get_messages_from_chat
--get_messages_from_chat_from_user
+-get_chat_list_for_user +
+-get_messages_from_chat +
+-get_messages_from_chat_from_user -
 
 
 
